--- a/app/src/main/res/layout/fragment_home_page_layout.xml
+++ b/app/src/main/res/layout/fragment_home_page_layout.xml
@@ -25,76 +25,84 @@
         android:paddingBottom="2dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="2dp" >
+        android:paddingTop="10dp" >
 
-        <ImageView
-            android:id="@+id/iv_play_icon"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/home_page_controller_lv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_launcher" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv_play_icon"
-            android:orientation="vertical"
-            android:paddingLeft="5dp" >
-
-            <TextView
-                android:id="@+id/tv_play_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/white" />
-
-            <TextView
-                android:id="@+id/tv_play_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="@android:color/white"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:orientation="horizontal" >
-
+            android:orientation="horizontal"
+            >
             <ImageView
-                android:id="@+id/iv_pre"
+                android:id="@+id/iv_play_icon"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_launcher" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_media_previous" />
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv_play_icon"
+                android:orientation="vertical"
+                android:paddingLeft="5dp" >
 
-            <ImageView
-                android:id="@+id/iv_play"
+                <TextView
+                    android:id="@+id/tv_play_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white" />
+
+                <TextView
+                    android:id="@+id/tv_play_artist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:src="@android:drawable/ic_media_play" />
+                android:layout_centerVertical="true"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                >
 
-            <ImageView
-                android:id="@+id/iv_next"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_media_next" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/iv_pre"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@android:drawable/ic_media_previous" />
 
+                <ImageView
+                    android:id="@+id/iv_play"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@android:drawable/ic_media_play" />
+
+                <ImageView
+                    android:id="@+id/iv_next"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@android:drawable/ic_media_next" />
+            </LinearLayout>
+        </RelativeLayout>
         <SeekBar
             android:id="@+id/play_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/iv_play_icon"
+            android:layout_below="@id/home_page_controller_lv"
             android:layout_marginLeft="-10dp"
             android:layout_marginRight="-10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="1dp"
             android:max="100"
             android:progressDrawable="@drawable/play_progressbar_green"
             android:thumb="@null" />
