--- a/app/src/main/res/layout/fragment_song_list.xml
+++ b/app/src/main/res/layout/fragment_song_list.xml
@@ -6,9 +6,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_song_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:alwaysDrawnWithCache="false"
-        android:scrollbars="none"
-        android:scrollbarStyle="@null"
+        android:layout_height="match_parent"
         />
 </LinearLayout>
