--- a/app/src/main/res/layout/fragment_mine_page.xml
+++ b/app/src/main/res/layout/fragment_mine_page.xml
@@ -16,6 +16,7 @@
             android:contentDescription="@null"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
+            android:src="@drawable/ic_launcher"
             />
         <LinearLayout
             android:layout_width="wrap_content"
