--- a/app/src/main/res/layout/item_home_page_top.xml
+++ b/app/src/main/res/layout/item_home_page_top.xml
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="流行"
+                android:text="流行榜"
                 />
         </LinearLayout>
 
@@ -57,7 +57,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="流行"
+                android:text="音乐人"
                 />
         </LinearLayout>
 
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="流行"
+                android:text="K歌金曲"
                 />
         </LinearLayout>
     </LinearLayout>
