--- a/app/src/main/res/layout/item_home_page_top.xml
+++ b/app/src/main/res/layout/item_home_page_top.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="10dp"
         >
         <LinearLayout
             android:layout_width="wrap_content"
