--- a/app/src/main/res/layout/play_notification.xml
+++ b/app/src/main/res/layout/play_notification.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -7,17 +7,19 @@
     <ImageView 
         android:id="@+id/music_icon"
         android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_launcher"
         android:layout_gravity="center_vertical"
         />
-    <LinearLayout 
+    <LinearLayout
+        android:id="@+id/music_name_author"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="5dp"
-        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/music_icon"
         >
         <TextView 
             android:id="@+id/music_name"
@@ -40,23 +42,31 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/player_btn_pre_normal"
-        android:layout_gravity="center_vertical"/>
+        android:src="@android:drawable/ic_media_previous"
+        android:layout_gravity="center_vertical"
+        android:layout_toLeftOf="@+id/music_play_pause"
+        android:layout_centerVertical="true"
+        />
     <ImageView 
         android:id="@+id/music_play_pause"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/btn_notification_player_stop_normal"
+        android:src="@android:drawable/ic_media_play"
         android:layout_gravity="center_vertical"
+        android:layout_toLeftOf="@+id/music_play_next"
+        android:layout_centerVertical="true"
         />
     <ImageView 
         android:id="@+id/music_play_next"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/player_btn_next_normal"
-        android:layout_gravity="center_vertical"/>
+        android:src="@android:drawable/ic_media_next"
+        android:layout_gravity="center_vertical"
+        android:layout_toLeftOf="@+id/music_play_notifi_exit"
+        android:layout_centerVertical="true"
+        />
     <ImageView 
         android:id="@+id/music_play_notifi_exit"
         android:layout_width="20dp"
@@ -64,6 +74,10 @@
         android:contentDescription="@string/app_name"
         android:src="@drawable/notification_exit"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:layout_centerVertical="true"
+        />
 
-</LinearLayout>
+</RelativeLayout>
