update ui and finish song play function

--- a/app/src/main/res/layout/play_notification.xml
+++ b/app/src/main/res/layout/play_notification.xml
@@ -26,8 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:singleLine="true"
+            android:lines="1"
             android:ellipsize="end"
+            android:textColor="@color/main"
             />
         <TextView 
             android:id="@+id/music_author"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:layout_marginTop="5dp"
+            android:textColor="@color/main"
             />
     </LinearLayout>
     <ImageView 
