--- a/app/src/main/res/layout/download_remote_layout.xml
+++ b/app/src/main/res/layout/download_remote_layout.xml
@@ -14,7 +14,7 @@
         android:id="@+id/tv_download_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
+        android:lines="1"
         android:ellipsize="end" />
 
     <ProgressBar
