--- a/app/src/main/res/layout/fragment_home_page_layout.xml
+++ b/app/src/main/res/layout/fragment_home_page_layout.xml
@@ -91,6 +91,12 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@android:drawable/ic_media_next" />
+                <ImageView
+                    android:id="@+id/iv_play_order"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:src="@drawable/ic_media_play_order" />
             </LinearLayout>
         </RelativeLayout>
         <SeekBar
