--- a/app/src/main/res/layout/item_home_page_top.xml
+++ b/app/src/main/res/layout/item_home_page_top.xml
@@ -10,11 +10,13 @@
         android:contentDescription="@null"
         android:src="@drawable/pic_home_page_network_song"
         android:scaleType="fitXY"
+        android:visibility="gone"
         />
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/lightgray"
+        android:visibility="gone"
         />
 
     <LinearLayout
@@ -24,6 +26,7 @@
         android:weightSum="3"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         >
         <LinearLayout
             android:layout_width="wrap_content"
@@ -94,13 +97,16 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/lightgray"
+        android:visibility="visible"
         />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        >
         <ImageView
             android:id="@+id/item_home_page_bottom_iv"
             android:layout_width="match_parent"
@@ -110,6 +116,7 @@
             android:scaleType="fitXY"
             />
     </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
