--- a/app/src/main/res/layout/fragment_song_list.xml
+++ b/app/src/main/res/layout/fragment_song_list.xml
@@ -4,14 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_song_list"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="dddddd"
+        android:layout_height="match_parent"
         />
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rv_song_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
 </LinearLayout>
