--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:orientation="vertical"
-    android:background="#ffffff"
-    android:layout_height="fill_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#ffffff"
+              android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/lime_green"
         app:title="音乐播放器"
         app:titleTextColor="@color/white"
@@ -16,50 +17,58 @@
     </android.support.v7.widget.Toolbar>
 
     <TextView
-        android:text="关于我们"
         android:id="@+id/au_title"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:text="关于我们"
         android:textSize="20sp"
         />
 
     <TextView
-        android:layout_marginTop="10px"
-        android:paddingLeft="15px"
+        android:id="@+id/au_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="15dp"
         android:text=""
-        android:layout_width="fill_parent"
-        android:id="@+id/au_content"/>
-    <View android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="10px"
-        android:background="#CCCCCC" />
+        android:textColor="#000000"/>
 
-    <TextView android:layout_marginTop="10px"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="#CCCCCC"/>
+
+    <TextView
+        android:id="@+id/music_introduce"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textColor="#000000"
-        android:paddingLeft="15px"
-        android:text="音乐播放器"
-        android:layout_width="fill_parent"
+        android:layout_marginTop="10dp"
         android:autoLink="phone"
         android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="音乐播放器介绍"
+        android:textColor="@color/lime_green"
         />
-    <View android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_marginTop="10px"
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
         android:background="#CCCCCC"
         />
-    <TextView android:layout_marginTop="10px"
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textColor="#000000"
-        android:paddingLeft="15px"
-        android:text="个人博客：http://blog.csdn.net/u010156024"
-        android:layout_width="fill_parent"
+        android:layout_marginTop="10dp"
         android:autoLink="web"
         android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:text="个人博客：http://blog.csdn.net/u010156024"
+        android:textColor="#000000"
         />
 
 </LinearLayout>
